# clinical-data-gateway-api

./: .commit_template  .editorconfig  .env.template  .gitignore  .gitleaksignore  .gitmodules  .tool-versions  Agents.md  Makefile  README.md  SECURITY.md  project.code-workspace  pytest.ini  ruff.toml  schemathesis.toml  sonar-project.properties
gateway-api/: .coverage  README.md  lambda_handler.py  openapi.template.yaml  openapi.yaml  pyproject.toml  pytest.ini
gateway-api/features/: README.md  environment.py  hello_world.feature
gateway-api/features/steps/: hello_world_steps.py
gateway-api/scripts/: call_gateway.py  test_call_gateway.py
gateway-api/src/fhir/: README.md  __init__.py  bundle.py  constants.py  elements.py  general_practitioner.py  human_name.py  identifier.py  operation_outcome.py  parameters.py  patient.py  period.py  resources.py  test_resources.py
gateway-api/src/fhir/elements/: identifier.py  issue.py  meta.py  test_elements.py
gateway-api/src/fhir/r4/: __init__.py
gateway-api/src/fhir/resources/: __init__.py  bundle.py  device.py  endpoint.py  operation_outcome.py  parameters.py  patient.py  resource.py  test_resource.py  test_resources.py
gateway-api/src/fhir/stu3/: __init__.py
gateway-api/src/gateway_api/: app.py  conftest.py  controller.py  handler.py  main.py  pds_search.py  provider_request.py  sds_search.py  test_app.py  test_controller.py  test_handler.py  test_pds_search.py  test_provider_request.py  test_sds_search.py
gateway-api/src/gateway_api/apim_app_auth/: __init__.py  apim.py  environment.py  http.py  test_apim.py  test_config.py  test_environment.py  test_http.py  test_request_context.py
gateway-api/src/gateway_api/clinical_jwt/: __init__.py  device.py  jwt.py  organization.py  practitioner.py  test_device.py  test_jwt.py  test_practitioner.py  test_validator.py  validator.py
gateway-api/src/gateway_api/common/: common.py  error.py  test_common.py
gateway-api/src/gateway_api/get_structed_record/: __init__.py  handler.py  request.py
gateway-api/src/gateway_api/get_structured_record/: __init__.py  handler.py  request.py  response.py  test_request.py  test_response.py
gateway-api/src/gateway_api/pds/: __init__.py  client.py  pds_search.py  search_results.py  test_client.py
gateway-api/src/gateway_api/provider/: __init__.py  client.py  test_client.py
gateway-api/src/gateway_api/sds/: __init__.py  client.py  search_results.py  test_client.py
gateway-api/src/scripts/: __init__.py  call_gateway.py  test_call_gateway.py
gateway-api/stubs/: conftest.py  stub_pds.py
gateway-api/stubs/stubs/: __init__.py  base_stub.py  stub_pds.py  stub_provider.py  stub_sds.py
gateway-api/stubs/stubs/apim_app_auth/: stub.py
gateway-api/stubs/stubs/pds/: stub.py  test_stub.py
gateway-api/stubs/stubs/provider/: stub.py
gateway-api/stubs/stubs/sds/: __init__.py  stub.py
gateway-api/test-artefacts/: acceptance-tests.html  acceptance-tests.xml
gateway-api/tests/: README.md  conftest.py  test_consumer_contract.py  test_main.py  test_provider_contract.py
gateway-api/tests/acceptance/: README.md  conftest.py  test_hello_world.py
gateway-api/tests/acceptance/features/: README.md  gateway_api_responses.feature  happy_path.feature  hello_world.feature
gateway-api/tests/acceptance/scenarios/: test_gateway_api_responses.py  test_happy_path.py
gateway-api/tests/acceptance/steps/: gateway_api_responses.py  happy_path.py  hello_world_steps.py
gateway-api/tests/contract/: conftest.py  conftest_pact.py  test_consumer_contract.py  test_provider_contract.py
gateway-api/tests/contract/pacts/: GatewayAPIConsumer-GatewayAPIProvider.json
gateway-api/tests/contract/stub/: TEST_DESCRIPTIONS.md  __init__.py  sds_stub_contract_tests.md  test_apim_app_auth_contract.py  test_pds_stub_contract.py  test_provider_stub_contract.py  test_sds_stub_contract.py
gateway-api/tests/integration/: test_get_structured_record.py  test_main.py  test_sds_search.py
gateway-api/tests/load/: health-test.py
gateway-api/tests/manual-test/: README.md
gateway-api/tests/schema/: test_openapi_schema.py
(+201 files in other folders)
