[project]
name = "gateway-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">3.12,<4.0.0"
dependencies = [
]

[tool.poetry]
packages = [{include = "gateway_api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)",
    "pytest>=8.0.0",
    "pact-python>=2.0.0",
    "requests>=2.31.0",
    "schemathesis>=4.4.1",
    "types-requests (>=2.32.4.20250913,<3.0.0.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)",
    "pytest-bdd (>=8.1.0,<9.0.0)",
]

[tool.mypy]
strict = true
